# auto_pylabrobot

./: LICENSE  README.md
auto-pylabrobot/: configureWebSocketProxy.js  next.config.js  package.json  server.js
auto-pylabrobot/pages/: index.tsx  promptPreamble.txt
auto-pylabrobot/pages/api/simulator/: runScript.ts
auto-pylabrobot/pages/api/simulator/logs/: [simulatorContainerId].ts
auto-pylabrobot/pages/api/simulator/proxy/: [...params].ts
simulator/: Dockerfile  app.py  pyproject.toml
