[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["uyhcire <27897696+uyhcire@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
